--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <div id="openseadragon1" style="width: 95%; height: 95%;"></div>
 <script src="openseadragon.min.js"></script>
+<script src="openseadragon-scalebar.js"></script>
 <script type="text/javascript">
     OpenSeadragon.DEFAULT_SETTINGS.timeout = 120000; 
     var viewer = OpenSeadragon({
