--- a/static/index.html
+++ b/static/index.html
@@ -18,4 +18,8 @@
         visibilityRatio: 	0.5,
         tileSources:   "/genome.dzi",
     });
+    viewer.scalebar({
+        minWidth: 10,
+        pixelsPerMeter: 1000
+    });
 </script>
